Install jquery.parallax. Apply the example parallax (2.00)

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "jquery": "^3.1.0",
     "html5shiv": "^3.7.3",
     "bxslider-4": "^4.2.5",
-    "jquery.maskedinput": "^1.4.1"
+    "jquery.maskedinput": "^1.4.1",
+    "parallax": "^2.1.3"
   }
 }
