--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "html5shiv": "^3.7.3",
     "bxslider-4": "^4.2.5",
     "jquery.maskedinput": "^1.4.1",
-    "parallax": "^2.1.3"
+    "parallax": "^2.1.3",
+    "jquery.easing": "^1.3.1"
   }
 }
